Fix login/register page styling on small screens

--- a/assets/sass/components/_chrome.scss
+++ b/assets/sass/components/_chrome.scss
@@ -30,7 +30,7 @@ body.no-js .if-js {
   }
 }
 
-@include if_screen(">full") {
+@include if_screen(">side-by-side") {
   .main {
     padding: 0 calc(var(--gutter) * 2);
     margin-left: var(--sidebar-width);
